--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -81,7 +82,7 @@
   }
 
   .paragraph {
-    @apply font-medium text-gray-600 dark:text-slate-300;
+    @apply text-xl text-custom-black font-medium dark:text-slate-300;
   }
 
   .test {
@@ -108,8 +109,9 @@
     scroll-behavior: smooth;
     box-sizing: border-box;
     font: inherit;
-    font-size: calc(8px + 0.6vw);
+    font-size: calc(9px + 0.5vw);
     transition: background ease-out 400ms;
+    font-family: 'Poppins', sans-serif;
 
     /* hide default increment and decrement indicator */
     input[type="number"]::-webkit-outer-spin-button,
@@ -124,3 +126,4 @@
     }
   }
 }
+
