--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -109,6 +109,7 @@
 		scroll-behavior: smooth;
 		box-sizing: border-box;
 		font: inherit;
+		font-size: calc(9px + 0.5vw);
 		transition: background ease-out 400ms;
 		font-family: "Poppins", sans-serif;
 
