--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -4,15 +4,18 @@
 	}
 
 	25% {
-		transform: translate(2em, 16em) scale(4.5);
+		transform: translate(32em, 10em) scale(4.5);
+	}
+
+	50% {
+		transform: translate(-12em, 7em) scale(2);
 	}
 
 	70% {
-		transform: translate(2em, 7em) scale(2);
+		transform: translate(-6em, 21em) scale(3);
 	}
-
 	100% {
-		transform: translate(-6em, 11em) scale(3);
+		transform: translate(-16em, 26em) scale(3);
 	}
 }
 
