--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -127,6 +127,17 @@
 	}
 }
 
+html,
+body {
+	::-webkit-scrollbar {
+		width: 7px;
+	}
+
+	::-webkit-scrollbar-thumb {
+		background-color: #b247ff;
+		border-radius: 10px;
+	}
+}
 
 @media (height < 600px) {
 	#hero-section {
