--- a/src/styles/animations.css
+++ b/src/styles/animations.css
@@ -3,55 +3,76 @@
 		transform: translate(6em, 20em) scale(1.2);
 	}
 
-	25% {
-		transform: translate(32em, 10em) scale(4.5);
+	20% {
+		transform: translate(22em, 10em) scale(3);
+	}
+
+	30% {
+		transform: translate(12em, 10em) scale(2);
+	}
+
+	40% {
+		transform: translate(0em, 10em) scale(2);
 	}
 
 	50% {
-		transform: translate(-12em, 7em) scale(2);
+		transform: translate(-10em, 3em) scale(2);
+	}
+
+	60% {
+		transform: translate(0em, 13em) scale(2);
 	}
 
 	70% {
-		transform: translate(-6em, 21em) scale(3);
+		transform: translate(10em, 33em) scale(2);
 	}
-	100% {
-		transform: translate(-16em, 26em) scale(3);
+
+	80% {
+		transform: translate(20em, 33em) scale(2);
 	}
 }
 
 @keyframes bouncing2 {
-	0% {
-		transform: translate(11em, 6em) scale(1.6);
+	20% {
+		transform: translate(1em, 26em) scale(2);
 	}
 
-	25% {
-		transform: translate(28em, 20em) scale(1);
+	40% {
+		transform: translate(8em, 35em) scale(3);
 	}
 
-	70% {
-		transform: translate(37em, 0em) scale(3);
+	60% {
+		transform: translate(18em, 16em) scale(2);
+	}
+
+	80% {
+		transform: translate(30em, 30em) scale(0.8);
 	}
 
 	100% {
-		transform: translate(60em, 16em) scale(1.8);
+		transform: translate(50em, 14em) scale(1.4);
 	}
 }
 
 @keyframes bouncing3 {
 	10% {
-		transform: translate(0em, 25em) scale(1.5);
+		transform: translate(0em, 15em) scale(1.5);
 	}
 
 	25% {
-		transform: translate(-26em, 12em) scale(3);
+		transform: translate(-4em, 20em) scale(2);
+	}
+
+	50% {
+		transform: translate(-10em, 35em) scale(1.2);
 	}
 
 	70% {
-		transform: translate(-40em, 18em) scale(1.2);
+		transform: translate(-20em, 25em) scale(2);
 	}
 
 	100% {
-		transform: translate(-55em, 5em) scale(2);
+		transform: translate(1em, 20em) scale(1.5);
 	}
 }
 
