--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -1,421 +1,480 @@
+/*!download button */
+.button {
+  position: relative;
+  width: 170px;
+  height: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  background-color: #fff;
+  overflow: hidden;
+  border-radius: 0.75rem;
+}
+
+.button,
+.button__icon,
+.button__text {
+  transition: all 0.3s;
+}
+
+.button .button__text {
+  transform: translateX(22px);
+  color: #9f3ff9;
+  font-weight: 500;
+  z-index: 10000;
+}
+
+.button .button__icon {
+  position: absolute;
+  transform: translateX(130px);
+  height: 100%;
+  width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.button .svg {
+  width: 20px;
+  fill: #9f3ff9;
+}
+
+.button:hover {
+  background: #a855f7;
+  transition: background 0.3s;
+}
+.button:hover .svg {
+  width: 20px;
+  fill: #fff;
+}
+
+.button:hover .button__text {
+  color: transparent;
+}
+
+.button:hover .button__icon {
+  width: 100%;
+  transform: translateX(0px);
+  transition: transform 0.3s;
+}
+
+.button:active .button__icon {
+  background-color: #7c35bf;
+}
+
 /*!loading button */
 .loader {
-	border: 4px solid rgba(0, 0, 0, 0.1);
-	border-left-color: transparent;
-	border-radius: 50%;
-	position: relative;
-	right: 1em;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: transparent;
+  border-radius: 50%;
+  position: relative;
+  right: 1em;
 }
 
 .loader {
-	border: 4px solid rgba(0, 0, 0, 0.1);
-	border-left-color: transparent;
-	width: 19px;
-	height: 19px;
+  border: 4px solid rgba(0, 0, 0, 0.1);
+  border-left-color: transparent;
+  width: 19px;
+  height: 19px;
 }
 
 .loader {
-	border: 4px solid #3300ff;
-	border-left-color: transparent;
-	width: 19px;
-	height: 19px;
-	animation: spin89345 1s linear infinite;
+  border: 4px solid #3300ff;
+  border-left-color: transparent;
+  width: 19px;
+  height: 19px;
+  animation: spin89345 1s linear infinite;
 }
 
 @keyframes spin89345 {
-	0% {
-		transform: rotate(0deg);
-	}
+  0% {
+    transform: rotate(0deg);
+  }
 
-	100% {
-		transform: rotate(360deg);
-	}
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 /*!Theme button */
 .toggle {
-	border-radius: 50%;
-	display: grid;
-	place-items: center;
-	cursor: pointer;
-	box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.1);
-	line-height: 1;
-	padding: 0.5em;
+  border-radius: 50%;
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  box-shadow: 0 0 50px 20px rgba(0, 0, 0, 0.1);
+  line-height: 1;
+  padding: 0.5em;
 }
 
 .input {
-	display: none;
+  display: none;
 }
 
 .icon {
-	grid-column: 1 / 1;
-	grid-row: 1 / 1;
-	transition: transform 500ms;
+  grid-column: 1 / 1;
+  grid-row: 1 / 1;
+  transition: transform 500ms;
 }
 
 .icon--moon {
-	transition-delay: 200ms;
+  transition-delay: 200ms;
 }
 
 .icon--sun {
-	transform: scale(0);
+  transform: scale(0);
 }
 
-#switch:checked+.icon--moon {
-	transform: rotate(360deg) scale(0);
+#switch:checked + .icon--moon {
+  transform: rotate(360deg) scale(0);
 }
 
-#switch:checked~.icon--sun {
-	transition-delay: 200ms;
-	transform: scale(1) rotate(360deg);
+#switch:checked ~ .icon--sun {
+  transition-delay: 200ms;
+  transform: scale(1) rotate(360deg);
 }
-
-
-
 
 /* From Uiverse.io by lesimpleliott */
 .loader__balls {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	gap: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
 
 .loader__balls__group {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	align-items: center;
-	position: relative;
-	height: 100px;
-	width: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  position: relative;
+  height: 100px;
+  width: 40px;
 }
 
 .ball {
-	height: 30px;
-	width: 30px;
-	border-radius: 15px;
-	position: absolute;
-	transform-origin: bottom;
+  height: 30px;
+  width: 30px;
+  border-radius: 15px;
+  position: absolute;
+  transform-origin: bottom;
 }
 
 /* ANIMATION BALL 1*/
 .loader__balls__group :nth-child(1) {
-	background-color: #99e2d0;
-	animation-name: jumpinBallAnimation1;
-	animation-duration: 1000ms;
-	animation-iteration-count: infinite;
+  background-color: #99e2d0;
+  animation-name: jumpinBallAnimation1;
+  animation-duration: 1000ms;
+  animation-iteration-count: infinite;
 }
 
 @keyframes jumpinBallAnimation1 {
-	0% {
-		transform: translateY(0) scale(1, 1);
-	}
+  0% {
+    transform: translateY(0) scale(1, 1);
+  }
 
-	10% {
-		transform: translateY(0) scale(1.3, 0.8);
-	}
+  10% {
+    transform: translateY(0) scale(1.3, 0.8);
+  }
 
-	11% {
-		transform: translateY(0) scale(0.7, 1.2);
-		animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
-	}
+  11% {
+    transform: translateY(0) scale(0.7, 1.2);
+    animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
+  }
 
-	39% {
-		transform: translateY(-75px) scale(1);
-		animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
-	}
+  39% {
+    transform: translateY(-75px) scale(1);
+    animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
+  }
 
-	40% {
-		transform: translateY(-75px) scale(1);
-	}
+  40% {
+    transform: translateY(-75px) scale(1);
+  }
 
-	41% {
-		transform: translateY(-75px) scale(1);
-		animation-timing-function: cubic-bezier(1, 0, 1, 0);
-	}
+  41% {
+    transform: translateY(-75px) scale(1);
+    animation-timing-function: cubic-bezier(1, 0, 1, 0);
+  }
 
-	69% {
-		transform: translateY(0px) scale(1, 1);
-		animation-timing-function: cubic-bezier(1, 0, 1, 0);
-	}
+  69% {
+    transform: translateY(0px) scale(1, 1);
+    animation-timing-function: cubic-bezier(1, 0, 1, 0);
+  }
 
-	70% {
-		transform: translateY(0) scale(1.5, 0.4);
-	}
+  70% {
+    transform: translateY(0) scale(1.5, 0.4);
+  }
 
-	80% {
-		transform: translateY(0) scale(0.8, 1.2);
-	}
+  80% {
+    transform: translateY(0) scale(0.8, 1.2);
+  }
 
-	90% {
-		transform: translateY(0) scale(1.1, 0.8);
-	}
+  90% {
+    transform: translateY(0) scale(1.1, 0.8);
+  }
 
-	100% {
-		transform: translateY(0) scale(1, 1);
-	}
+  100% {
+    transform: translateY(0) scale(1, 1);
+  }
 }
 
 /* ANIMATION BALL 2*/
 .loader__balls__group :nth-child(2) {
-	background-color: #ff79da;
-	animation-name: jumpinBallAnimation2;
-	animation-duration: 1000ms;
-	animation-iteration-count: infinite;
+  background-color: #ff79da;
+  animation-name: jumpinBallAnimation2;
+  animation-duration: 1000ms;
+  animation-iteration-count: infinite;
 }
 
 @keyframes jumpinBallAnimation2 {
-	0% {
-		transform: translateY(0) scale(1, 1);
-	}
+  0% {
+    transform: translateY(0) scale(1, 1);
+  }
 
-	10% {
-		transform: translateY(0) scale(1.3, 0.8);
-	}
+  10% {
+    transform: translateY(0) scale(1.3, 0.8);
+  }
 
-	11% {
-		transform: translateY(0) scale(0.7, 1.2);
-		animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
-	}
+  11% {
+    transform: translateY(0) scale(0.7, 1.2);
+    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+  }
 
-	39% {
-		transform: translateY(-75px) scale(1);
-		animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
-	}
+  39% {
+    transform: translateY(-75px) scale(1);
+    animation-timing-function: cubic-bezier(0, 0.5, 0.5, 1);
+  }
 
-	40% {
-		transform: translateY(-75px) scale(1);
-	}
+  40% {
+    transform: translateY(-75px) scale(1);
+  }
 
-	41% {
-		transform: translateY(-75px) scale(1);
-		animation-timing-function: cubic-bezier(1, 0, 1, 0.5);
-	}
+  41% {
+    transform: translateY(-75px) scale(1);
+    animation-timing-function: cubic-bezier(1, 0, 1, 0.5);
+  }
 
-	69% {
-		transform: translateY(0px) scale(1, 1);
-		animation-timing-function: cubic-bezier(1, 0, 1, 0.5);
-	}
+  69% {
+    transform: translateY(0px) scale(1, 1);
+    animation-timing-function: cubic-bezier(1, 0, 1, 0.5);
+  }
 
-	70% {
-		transform: translateY(0) scale(1.5, 0.4);
-	}
+  70% {
+    transform: translateY(0) scale(1.5, 0.4);
+  }
 
-	80% {
-		transform: translateY(0) scale(0.8, 1.2);
-	}
+  80% {
+    transform: translateY(0) scale(0.8, 1.2);
+  }
 
-	90% {
-		transform: translateY(0) scale(1.1, 0.8);
-	}
+  90% {
+    transform: translateY(0) scale(1.1, 0.8);
+  }
 
-	100% {
-		transform: translateY(0) scale(1, 1);
-	}
+  100% {
+    transform: translateY(0) scale(1, 1);
+  }
 }
 
 /*!ANIMATION BALL LOADER*/
 /* From Uiverse.io by lesimpleliott */
 .loader__balls {
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	align-items: center;
-	gap: 15px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 15px;
 }
 
 .loader__balls__group {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-end;
-	align-items: center;
-	position: relative;
-	height: 100px;
-	width: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  position: relative;
+  height: 100px;
+  width: 40px;
 }
 
 .ball {
-	height: 30px;
-	width: 30px;
-	border-radius: 15px;
-	position: absolute;
-	transform-origin: bottom;
+  height: 30px;
+  width: 30px;
+  border-radius: 15px;
+  position: absolute;
+  transform-origin: bottom;
 }
 
 /* ANIMATION BALL 1*/
 .loader__balls__group :nth-child(1) {
-	background-color: #99e2d0;
-	animation-name: jumpinBallAnimation1;
-	animation-duration: 1000ms;
-	animation-iteration-count: infinite;
+  background-color: #99e2d0;
+  animation-name: jumpinBallAnimation1;
+  animation-duration: 1000ms;
+  animation-iteration-count: infinite;
 }
 
 @keyframes jumpinBallAnimation1 {
-	0% {
-		transform: translateY(0) scale(1, 1);
-	}
+  0% {
+    transform: translateY(0) scale(1, 1);
+  }
 
-	10% {
-		transform: translateY(0) scale(1.3, 0.8);
-	}
+  10% {
+    transform: translateY(0) scale(1.3, 0.8);
+  }
 
-	11% {
-		transform: translateY(0) scale(0.7, 1.2);
-		animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
-	}
+  11% {
+    transform: translateY(0) scale(0.7, 1.2);
+    animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
+  }
 
-	39% {
-		transform: translateY(-75px) scale(1);
-		animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
-	}
+  39% {
+    transform: translateY(-75px) scale(1);
+    animation-timing-function: cubic-bezier(0, 0, 0.5, 1);
+  }
 
-	40% {
-		transform: translateY(-75px) scale(1);
-	}
+  40% {
+    transform: translateY(-75px) scale(1);
+  }
 
-	41% {
-		transform: translateY(-75px) scale(1);
-		animation-timing-function: cubic-bezier(1, 0, 1, 0);
-	}
+  41% {
+    transform: translateY(-75px) scale(1);
+    animation-timing-function: cubic-bezier(1, 0, 1, 0);
+  }
 
-	69% {
-		transform: translateY(0px) scale(1, 1);
-		animation-timing-function: cubic-bezier(1, 0, 1, 0);
-	}
+  69% {
+    transform: translateY(0px) scale(1, 1);
+    animation-timing-function: cubic-bezier(1, 0, 1, 0);
+  }
 
-	70% {
-		transform: translateY(0) scale(1.5, 0.4);
-	}
+  70% {
+    transform: translateY(0) scale(1.5, 0.4);
+  }
 
-	80% {
-		transform: translateY(0) scale(0.8, 1.2);
-	}
+  80% {
+    transform: translateY(0) scale(0.8, 1.2);
+  }
 
-	90% {
-		transform: translateY(0) scale(1.1, 0.8);
-	}
+  90% {
+    transform: translateY(0) scale(1.1, 0.8);
+  }
 
-	100% {
-		transform: translateY(0) scale(1, 1);
-	}
+  100% {
+    transform: translateY(0) scale(1, 1);
+  }
 }
 
 /* !Loading 2*/
 .dot-spinner {
-	position: relative;
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	--uib-speed: 0.9s;
-	height: 2.8rem;
-	width: 2.8rem;
-	/*animation: float 3s linear infinite;*/
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  --uib-speed: 0.9s;
+  height: 2.8rem;
+  width: 2.8rem;
+  /*animation: float 3s linear infinite;*/
 }
 
 @keyframes float {
-	0% {
-		transform: rotate(0deg) translate(100px) rotate(0deg);
-	}
+  0% {
+    transform: rotate(0deg) translate(100px) rotate(0deg);
+  }
 
-	100% {
-		transform: rotate(360deg) translate(100px) rotate(-360deg);
-	}
+  100% {
+    transform: rotate(360deg) translate(100px) rotate(-360deg);
+  }
 }
 
 .dot-spinner__dot::before {
-	content: '';
-	height: 20%;
-	width: 20%;
-	border-radius: 50%;
-	background-color: #a855f7;
-	filter: drop-shadow(0 0 10px rgb(95, 150, 202));
-	box-shadow: -6px -6px 11px #a855f7,
-		6px 6px 11px #a855f7;
-	transform: scale(0);
-	opacity: 0.5;
-	animation: pulse0112 calc(var(--uib-speed) * 1.111) ease-in-out infinite;
-	box-shadow: 0 0 20px rgba(18, 31, 53, 0.3);
+  content: "";
+  height: 20%;
+  width: 20%;
+  border-radius: 50%;
+  background-color: #a855f7;
+  filter: drop-shadow(0 0 10px rgb(95, 150, 202));
+  box-shadow: -6px -6px 11px #a855f7, 6px 6px 11px #a855f7;
+  transform: scale(0);
+  opacity: 0.5;
+  animation: pulse0112 calc(var(--uib-speed) * 1.111) ease-in-out infinite;
+  box-shadow: 0 0 20px rgba(18, 31, 53, 0.3);
 }
 
 .dot-spinner__dot {
-	position: absolute;
-	top: 0;
-	left: 0;
-	display: flex;
-	align-items: center;
-	justify-content: flex-start;
-	height: 100%;
-	width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  height: 100%;
+  width: 100%;
 }
 
 .dot-spinner__dot:nth-child(2) {
-	transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 
 .dot-spinner__dot:nth-child(2)::before {
-	animation-delay: calc(var(--uib-speed) * -0.875);
+  animation-delay: calc(var(--uib-speed) * -0.875);
 }
 
 .dot-spinner__dot:nth-child(3) {
-	transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .dot-spinner__dot:nth-child(3)::before {
-	animation-delay: calc(var(--uib-speed) * -0.75);
+  animation-delay: calc(var(--uib-speed) * -0.75);
 }
 
 .dot-spinner__dot:nth-child(4) {
-	transform: rotate(135deg);
+  transform: rotate(135deg);
 }
 
 .dot-spinner__dot:nth-child(4)::before {
-	animation-delay: calc(var(--uib-speed) * -0.625);
+  animation-delay: calc(var(--uib-speed) * -0.625);
 }
 
 .dot-spinner__dot:nth-child(5) {
-	transform: rotate(180deg);
+  transform: rotate(180deg);
 }
 
 .dot-spinner__dot:nth-child(5)::before {
-	animation-delay: calc(var(--uib-speed) * -0.5);
+  animation-delay: calc(var(--uib-speed) * -0.5);
 }
 
 .dot-spinner__dot:nth-child(6) {
-	transform: rotate(225deg);
+  transform: rotate(225deg);
 }
 
 .dot-spinner__dot:nth-child(6)::before {
-	animation-delay: calc(var(--uib-speed) * -0.375);
+  animation-delay: calc(var(--uib-speed) * -0.375);
 }
 
 .dot-spinner__dot:nth-child(7) {
-	transform: rotate(270deg);
+  transform: rotate(270deg);
 }
 
 .dot-spinner__dot:nth-child(7)::before {
-	animation-delay: calc(var(--uib-speed) * -0.25);
+  animation-delay: calc(var(--uib-speed) * -0.25);
 }
 
 .dot-spinner__dot:nth-child(8) {
-	transform: rotate(315deg);
+  transform: rotate(315deg);
 }
 
 .dot-spinner__dot:nth-child(8)::before {
-	animation-delay: calc(var(--uib-speed) * -0.125);
+  animation-delay: calc(var(--uib-speed) * -0.125);
 }
 
 @keyframes pulse0112 {
+  0%,
+  100% {
+    transform: scale(0);
+    opacity: 0.5;
+  }
 
-	0%,
-	100% {
-		transform: scale(0);
-		opacity: 0.5;
-	}
-
-	50% {
-		transform: scale(1);
-		opacity: 1;
-	}
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
 }
