--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -121,14 +121,14 @@
 html,
 body {
 	::-webkit-scrollbar {
-		width: 7px;
-		background-color: #000000;
+		width: 0px;
+		background-color: #fff;
 	}
 
-	::-webkit-scrollbar-thumb {
-		background-color: #bb5dff;
-		border-radius: 10px;
-	}
+	/* ::-webkit-scrollbar-thumb {
+    background-color: #a855f7;
+    border-radius: 10px;
+  } */
 
 	/* google fonts */
 	.signika-negative {
